--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 scroll = "^0.10"
 clap = "^2.33"
 sqlite = "^0.25"
+bincode = "^1.2"
+serde = { version = "1.0", features = ["derive"] }
 
 [[bin]]
 name = "graphic-info"
